[gd_scene load_steps=6 format=3 uid="uid://cb3tyecuy2mog"]

[ext_resource type="Script" uid="uid://dsli2pppl5qni" path="res://chris/main.gd" id="1_rd8nt"]
[ext_resource type="PackedScene" uid="uid://c4wbevqrgtglx" path="res://chris/enemy.tscn" id="2_8f6ys"]
[ext_resource type="PackedScene" uid="uid://juqw07ibbuhk" path="res://chris/player.tscn" id="3_8f6ys"]
[ext_resource type="PackedScene" uid="uid://drf8njxyveqp2" path="res://chris/hud.tscn" id="4_awu87"]

[sub_resource type="Curve2D" id="Curve2D_5i7a3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1920, 0)
}
point_count = 3

[node name="Main" type="Node"]
script = ExtResource("1_rd8nt")
mob_scene = ExtResource("2_8f6ys")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPos" type="Marker2D" parent="."]
position = Vector2(960, 540)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_5i7a3")

[node name="MobSpawn" type="PathFollow2D" parent="MobPath"]
position = Vector2(-0.0869751, 0)

[node name="Player" parent="." instance=ExtResource("3_8f6ys")]

[node name="HUD" parent="." instance=ExtResource("4_awu87")]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
